fixed overflow blob problem

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -11,9 +11,9 @@
 
 .animatedBlob {
   position: absolute;
+  top: 100px;
   height: 500px;
   width: 500px;
-  top: -20px;
   /* background-color: linear-gradient(
     90deg,
     rgba(219, 174, 16, 1) 8%,
@@ -40,6 +40,7 @@
 
 @media (max-width: 450px) {
   .animatedBlob {
+    top: 50px;
     width: 300px;
     height: 300px;
   }
